# orbax

pypi_dependency_test/: BUILD.bazel  MODULE.bazel  bazel-bin  bazel-out  bazel-pypi_dependency_test  bazel-testlogs  orbax-remove-path-BUILD.patch  orbax-remove-path-snapshot-BUILD.patch  orbax-update-RECORD.patch  pypi_dependency_test.py  requirements.macos_arm64.in  requirements.macos_arm64.txt
