"""Bazel module to demonstrate Orbax pypi failure."""

module(
    name = "orbax-test",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "1.0.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.12",
    requirements_by_platform = {
        "requirements.macos_arm64.txt": "osx_*",
    },
)

use_repo(pip, "pypi")
