"""Bazel module to demonstrate Orbax pypi failure."""

module(
    name = "orbax-test",
    version = "0.0.0",
)

bazel_dep(name = "rules_python", version = "1.0.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.12",
    requirements_by_platform = {
        "requirements.macos_arm64.txt": "osx_*",
    },
)
pip.override(
    file = "orbax_checkpoint-0.10.2-py3-none-any.whl",
    patch_strip = 0,
    patches = [
        "//:orbax-remove-path-BUILD.patch",
        "//:orbax-remove-path-snapshot-BUILD.patch",
        "//:orbax-update-RECORD.patch",
    ],
)

use_repo(pip, "pypi")
